# masmod

./: .clang-format  .gitignore  .style.yapf  CMakeLists.txt  README.md  masmodsub.cc  pyproject.toml
masmod/: __init__.py
masmod/ast_worker/: __init__.py  autodiff.py  func_return.py  ifelse.py
masmod/ast_worker/if_else/: __init__.py  _variable_mask.py  condition_hoist.py  if_else.py  variable_hoist.py  variable_override.py
masmod/compiler/: __init__.py  cc_compile.py
masmod/functional/: __init__.py  _wrapper.py
masmod/libc/: CMakeLists.txt  headers.hpp
masmod/libc/dylib/: dylib.hpp
masmod/libc/module/: _base.hpp
masmod/libc/modules/: concrete.hpp  dylib.hpp  interface.hpp  modules.hpp
masmod/libc/tests/: CMakeLists.txt
masmod/libc/tests/module/: test_base.cc
masmod/libc/tests/modules/: test_concrete.cc
masmod/module/: __init__.py  _base.py  _module.py  module.py  pred.py
masmod/module/autodiff/: pred.py
masmod/module/routines/: _base.py  pred.py
masmod/symbols/: __init__.py  _context.py  _covariate.py  _expr.py  _mu.py  _omega.py  _sigma.py  _theta.py  _typings.py  _variable.py  omega.py  sigma.py  theta.py  variable.py
masmod/transformer/: autodiff.py
masmod/translator/: __init__.py  cc_trans.py  hpp_trans.py  sympy_ast_trans.py
masmod/utils/: mask.py  mask_self.py  nanoid.py  rethrow.py
static/: fsubs.f90  psn.mod  target.pytext
tests/: conftest.py
tests/module/: test_basic.py
tests/module/emax/: Emax.ctl  dataEmax.csv  emax.cc  emax_refined.py  test_emax.py
tests/module/warfarin/: test_warfarin.py  warfarin.cc  warfarin.csv  (+1 more)
tests/symbols/: test_context.py  test_omega.py  test_sigma.py  test_theta.py  test_variable.py
tests/translator/: a.out  test_emax.cc  test_warfarin.cc
(+27 files in other folders)
