[tool.poetry]
name = "masmod"
version = "0.1.0"
description = ""
authors = ["johnnyxcy <johnny.xcy1997@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.5"
pandas = "^1.5.2"
sympy = "^1.11.1"
varname = "^0.10.0"


[tool.poetry.group.qa.dependencies]
mypy = "0.982"
autoflake = "^1.7.7"
isort = "^5.10.1"
yapf = "^0.32.0"


[tool.poetry.group.dev.dependencies]
toml = "^0.10.2"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
